k8s-api-objs.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: dockerfile-chuck
  labels:
    app: dockerfile-chuck
spec:
  template: 
    metadata:
      labels:
        name: dockerfile-chuck
    spec:
      containers:
        - name: dockerfile-chuck
          image: dockerfile-chuck
          ports:
            - containerPort: 8080
  replicas: 1 
  triggers:
    - type: ConfigChange 
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - dockerfile-chuck
        from:
          kind: ImageStreamTag
          name: dockerfile-chuck:latest
  strategy: 
    type: Rolling
  paused: false 
  revisionHistoryLimit: 5 
  minReadySeconds: 0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dockerfile-chuck
    application: dockerfile-chuck
  name: dockerfile-chuck
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: dockerfile-chuck
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: dockerfile-chuck
    application: dockerfile-chuck
  name: dockerfile-chuck
spec:
  to:
    kind: Service
    name: dockerfile-chuck
    weight: 100
